# better_aws_sso

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml  rust.yml
install/: linux_install.sh
src/: main.rs
